tests/macros/expand/editor.stderr
error: option `editor` does not exist for kind `expand`
 --> tests/macros/expand/editor.rs:2:44
  |
2 |     let q = requestty::questions![Expand { editor: todo!() }];
  |                                            ^^^^^^
