tests/macros/expand/editor.rs
fn main() {
    let q = requestty::questions![Expand { editor: todo!() }];
}
